# speech-to-text

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh
docs/: macos-notes.md
src/speech_to_text_app/: __init__.py  audio.py  config.py  injector.py  recognizer.py  recording_indicator.py  recording_meter.py  ui.py
src/speech_to_text_app/hotkeys/: __init__.py  base.py  macos.py  windows.py
src/speech_to_text_app/injectors/: __init__.py  base.py  linux.py  macos.py  windows.py
src/speech_to_text_app/providers/: __init__.py  base.py  gcp_speech.py  gcp_streaming.py  gcp_utterance.py  ollama_utterance.py  openai_chunked.py  openai_utterance.py
tests/: test_config.py  test_macos_hotkeys.py  test_macos_injector.py  test_ollama_provider.py  test_recognizer.py  test_recording_indicator.py
