[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-app"
version = "0.1.0"
description = "Cross-platform microphone dictation app backed by cloud and local speech-to-text providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-cloud-speech>=2.24.0",
  "openai>=1.0.0",
  "pynput>=1.7.7",
  "sounddevice>=0.4.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
speech_to_text_app = ["assets/*.png", "assets/*.ico"]

[tool.setuptools.packages.find]
where = ["src"]
